--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">spark</string>
     <string name="menu_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="search">Search</string>
+    <string name="show_whats_hot">Show What\'s Hot</string>
+    <string name="hide_whats_hot">Hide What\'s Hot</string>
 
 </resources>
