--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,8 +3,9 @@
 
     <string name="app_name">spark</string>
     <string name="menu_settings">Settings</string>
-    <string name="search">Search</string>
     <string name="show_whats_hot">Show What\'s Hot</string>
     <string name="hide_whats_hot">Hide What\'s Hot</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Search Locations</string>
 
 </resources>
