--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,8 @@
 
     <string name="app_name">spark</string>
     <string name="menu_settings">Settings</string>
-    <string name="show_whats_hot">Show What\'s Hot</string>
-    <string name="hide_whats_hot">Hide What\'s Hot</string>
-    <string name="show_subscriptions">Show Subscriptions</string>
-    <string name="hide_subscriptions">Hide Subscriptions</string>
+    <string name="whats_hot">What\'s Hot</string>
+    <string name="subscriptions">Subscriptions</string>
     <string name="search_title">Search</string>
     <string name="search_hint">Search Locations</string>
 
